# test-product-api

./: Dockerfile  Makefile  README.md  docker-compose.yaml  example.env  pyproject.toml  setup.py  web.entrypoint.sh
src/: web.py
src/api/v1/: router.py  schemas.py
src/api/v1/views/: products.py
src/core/: container.py  settings.py
src/domain/: commands.py  entities.py  errors.py  services.py  use_cases.py
src/gateways/mongodb/: database.py  dto.py  repositories.py
src/helpers/: errors.py
src/services/: product.py
tests/: conftest.py
tests/mocks/: factories.py  services.py
tests/use_case/: test_product_use_cases.py
