[tool.poetry]
name = "test-product-api"
version = "0.1.0"
description = ""
authors = ["Egor <slamihin123@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
punq = "^0.7.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.4"
motor = "^3.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
polyfactory = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]